css/styles.css
/*Starting with smallest responsive state, vertical phone*/
/*Global Elements*/
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-Thin.ttf");
    font-weight: 100;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-ExtraLight.ttf");
    font-weight: 200;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-Light.ttf");
    font-weight: 300;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-Regular.ttf");
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-Medium.ttf");
    font-weight: 500;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-Bold.ttf");
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-ExtraBold.ttf");
    font-weight: 800;
    font-style: normal;
}
@font-face {
    font-family:Arima Madurai;
    src: url("../fonts/ArimaMadurai-Black.ttf");
    font-weight: 900;
    font-style: normal;
}
* {
    box-sizing: border-box;
}
html, body { 
    margin: 0 0 0 0; padding: 0 0 0 0;
    overflow-x: hidden;
} 
body { 
    backface-visibility: hidden;
    overflow-y: hidden;
    min-height:100vh;
    min-height: -webkit-fill-available;
    display: flex;
    flex-direction: column;
    max-width:100%;
    background: url("../images/global/bg/BG_xsmall_L.png") no-repeat left top,
                url("../images/global/bg/BG_xsmall_R.png") no-repeat right top, 
                #F6EEE4;
    background-size: 27.2vw auto;  
    font-family: "Arima Madurai", cursive;
    font-weight: 400;
    color:#6B331D;    
}
    html body a:-webkit-any-link, html body a:visited, html body a:active {
        text-decoration: none;
        color:#6B331D;
    } 
    html body a:hover {
        text-decoration: underline;
        color:#6B331D;
    }
    nav {
        padding: 1.49vw 2.23vw 0px;
        display:flex;
        justify-content: center;
        letter-spacing: .005em;
        flex-direction: column;
        margin-top:5vh;
    }
        #HomeLink {
            text-align: center;
            font-size: 1.75em;
            line-height: 1.33em;
        }
        #PageLinks {
            text-align: center;
        }
            #PageLinks a {
                margin-left:30px;
                font-size: 1.125em;
                line-height: 1.61em;
                margin-right:30px;
            }
    footer {
        display: flex;
        justify-content: flex-end;
        box-sizing: border-box;
    }
        footer div {
            font-size: .75em;
            line-height: 1.42em;
            letter-spacing: .0035em;
            padding-right:20px;
        }
/*End Global Elements*/

/*Home page specific*/
    .mainContent {
        display:flex;
        align-items:stretch;
        justify-content: center;
        flex-grow: 2;
    }
    #home-mainContent {
        margin-top:5vh;
    }
        .flourish {
            width: 33.33vw;
            height: 57vh;
            min-height: 69vw;
        }
        img#flourish-L {
            margin-right:-16vw;
            margin-left:5vw;
        }
        #circleMask {
            position:relative;
            width: 58.37vw;
            height: 48vh;/*had to add the top margin value to account for missing height*/
            min-height: 58.37vw;
            background-color: #8D6B54;
            border-radius:55%/55%;
            border: 3px solid #8D6B54;
            overflow: hidden;
            z-index: 2;
            margin-top:6vh;
        }
            @keyframes zoomNfade {
                0% {
                    transform: scale(1, 1);
                }
                70% {
                    opacity: 1;
                }
                75% {
                    transform: scale(.86, .86);
                }
                100% {
                    transform: scale(.86, .86);
                    opacity:0;
                }
            }
            .addAnimation {
                animation: zoomNfade 4s ease-in-out;
            }
            #imageContainer {
                position:absolute;
                width:56vh;
                height:56vh;
                min-height: 68.1vw;
                min-width: 68.1vw;
                top: 50%;;
                left: 50%;
                transform: translateX(-50%) translateY(-50%);
            }
                #imageContainer img {
                    position:absolute;
                    width:56vh;
                    height:56vh;
                    min-width: 68.1vw;
                    min-height: 68.1vw;
                    transform: scale(1,1);
                }
                #circleMask img:nth-child(1) {
                    z-index:6;
                }
                #circleMask img:nth-child(2) {
                    z-index:5;
                }
                #circleMask img:nth-child(3) {
                    z-index:4;
                }
                #circleMask img:nth-child(4) {
                    z-index:3;
                }
                #circleMask img:nth-child(5) {
                    z-index:2;
                }
                #circleMask img:nth-child(6) {
                    z-index:1;
                }
        img#flourish-R {
            margin-left:-16vw;
            margin-right:3vw;
        }
/*End Home page*/  

/*Portfolio Page Specific*/    
.portfolioPage{
    max-height: 100vh;
}    
    @keyframes appear{
        0% {opacity:0;}
        100% {opacity:1;}
    }
    @keyframes disappear {
        0% {opacity: 1;}
        100% {opacity:0;}
    }
    
    .image-details-appear {
        animation: .25s ease-in 0s forwards appear;
    }
    .image-details-disappear {
        animation: .25s ease-out 0s forwards disappear;
    }
/* ... */

